--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "19.1.0",
     "react-howler": "^5.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
