--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lenis": "^1.3.8",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "19.1.0",
